--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="content">
         <img src="image/logo.jpg" alt="Company Logo" style="max-height: 150px; border-radius: 50%;">
         <h1>Training TR-103 Report</h1>
-        <p>By: JAGJEET SINGH <br>  URN: 2104120 <br>PG TECH PVT. LTD., MOHALI, PUNJAB</p>
+        <p>By: JAGsimranjit SINGH <br>  URN: 2104121 <br>PG TECH PVT. LTD., MOHALI, PUNJAB</p>
         <a href="days/daily.html" class="read-more">Daily Report</a>
     </div>
 </body>
